# Ardupilot_SITL-Boiler-Plate

./: README.md
multi_drone/: CMakeLists.txt  package.xml
multi_drone/include/: multi_drone.hpp
multi_drone/launch/: multi-apm.launch  multi_square_sol.launch
multi_drone/src/: multi_drone_node.cpp
single_drone/: CMakeLists.txt  README.md  package.xml
single_drone/launch/: apm.launch  iris_with_roscam.launch
single_drone/src/: single_drone_node.cpp
